# game-pipeline

./: .env.example  .gitignore  Dockerfile  MASTER_RULES.md  README.md  cli.py  create_first_game.py  docker-compose.yml  pyproject.toml  requirements.txt  run_dashboard.bat  run_e2e_test.py  test_pipeline.py
.github/workflows/: pipeline.yml
.tmp.driveupload/: 10001  10003  10005  10007  10009  1001  10011  10013  10015  10017  10019  10021  10023  10025  10027  10031  10033  10035  10037  10039  10041  10043  10047  1005  10051  10053  10055  10057  10059  10061  10063  10065  10067  10069  10071  10073  10075  10077  10079  10081  (+6597 more)
config/: grafana_dashboard.json  n8n_workflow_template.json  project_config.json
core/: __init__.py  pipeline.py
core/ab_testing/: __init__.py  ab_manager.py
core/asset_pipeline/: __init__.py  asset_generator.py  screenshot_generator.py
core/balancing/: __init__.py  auto_patcher.py  balance_manager.py
core/builder/: __init__.py  godot_builder.py
core/cache/: __init__.py  cache_manager.py
core/code_generator/: code_generator.py
core/crawler/: __init__.py  google_trends_crawler.py  tiktok_crawler.py
core/deployer/: __init__.py  ios_uploader.py  steam_uploader.py  store_uploader.py
core/gdd_generator/: __init__.py  gdd_generator.py  multilingual_gdd.py
core/maintenance/: self_healer.py
core/monitoring/: __init__.py  metrics.py
core/orchestrator/: __init__.py  factory.py  slack_notifier.py
core/plugins/: __init__.py  plugin_manager.py
core/security/: __init__.py  auth.py
core/voice/: voice_manager.py
core/web/: __init__.py  dashboard_server.py  webhook_server.py
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  DESIGN_COMPLETE_AUTOMATION.md  FULL_DOCUMENTATION.md  GITHUB_SECRETS_GUIDE.md  GUIDE.md  MODULES.md  ROADMAP_2026.md  ROADMAP_BEYOND.md  ROADMAP_SINGULARITY.md  VERIFICATION_REPORT.md
schemas/: README.md  gdd_schema.json  template_config_schema.json
templates/: .cursorrules  README.md
templates/template_clicker/: project.godot  template_config.json
templates/template_idle/: project.godot  template_config.json
tests/: test_core.py  test_integration.py
web_dashboard/: main.py
(+72 files in other folders)
